<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/autoBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp"
            android:background="@color/autoBackground">

            <TextView
                android:id="@+id/Help_intro_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/text_margin"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_text_size"
                android:fontFamily="sans-serif-thin"
                android:text="About the App"
                android:textColor="@color/autotext"/>

            <TextView
                android:id="@+id/help_intro_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_intro_text"
                android:textColor="@color/autotext"/>

            <TextView
                android:id="@+id/Help_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/text_margin"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_text_size"
                android:fontFamily="sans-serif-thin"
                android:text="Setup Instructions"
                android:textColor="@color/autotext"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/geo"
            android:background="@drawable/geo" />

            <TextView
                android:id="@+id/Help_geo_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="Geo Tab"
                android:textColor="@color/autotext"/>
</LinearLayout>
            <TextView
                android:id="@+id/Help_geo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_geo_text"
                android:textColor="@color/autotext"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/imageView"
            android:background="@drawable/car" />
            <TextView
                android:id="@+id/Help_vehicle_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="Vehicle Tab"
                android:textColor="@color/autotext"/>
</LinearLayout>
            <TextView
                android:id="@+id/Help_vehicle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_vehicle_text"
                android:textColor="@color/autotext"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/imageView3"
            android:background="@drawable/settings" />

            <TextView
                android:id="@+id/Help_settings_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="Settings Tab"
                android:textColor="@color/autotext"/>
</LinearLayout>
            <TextView
                android:id="@+id/Help_settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_settings_text"
                android:textColor="@color/autotext"/>

            <TextView
                android:id="@+id/Help_schedulejob_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="Schedule Job"
                android:textColor="@color/autotext"/>

            <TextView
                android:id="@+id/Help_schedulejob_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_schedule_text"
                android:textColor="@color/autotext"/>

            <TextView
                android:id="@+id/Help_json_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_json_text"
                android:textColor="@color/autotext"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:id="@+id/json"
                android:background="@drawable/json" />
            <TextView
                android:id="@+id/Help_server_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/text_margin"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_text_size"
                android:fontFamily="sans-serif-thin"
                android:text="Setting your server"
                android:textColor="@color/autotext"/>

            <TextView
                android:id="@+id/Help_server_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_server_text"
                android:textColor="@color/autotext"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:id="@+id/server"
                android:background="@drawable/server" />

            <TextView
                android:id="@+id/Help_disclaimer_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/text_margin"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_text_size"
                android:fontFamily="sans-serif-thin"
                android:text="Disclaimer"
                android:textColor="@color/autotext"/>


            <TextView
                android:id="@+id/Help_disclaimer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/lat_long_label_size"
                android:fontFamily="sans-serif-thin"
                android:text="@string/help_disclaimer_text"
                android:textColor="@color/autotext"/>

        </LinearLayout>

        </ScrollView>
